library/general/requiredlabels/samples/verify-label-key-only/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: does-not-have-pizza
  labels:
    taco: is-great
spec:
  containers:
    - name: nginx
      image: nginx
