library/general/requiredlabels/samples/verify-label-key-only/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: must-have-pizza
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    message: "All pods must have label of key `pizza` regardless of the label's value"
    labels:
      - key: pizza
